--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
                     <li class="menu__list__item"><a href="#skills">Skills</a></li>
                     <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
-                    <li class="menu__list__item"><a href="#formacion">Formación</a></li>
+                    <li class="menu__list__item"><a href="#formación">Formación</a></li>
                     <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
                     <li class="menu__list__item"><a href="#contacto">yeni.astaizav@gmail.com</a></li>
                 </ul>
@@ -45,10 +45,10 @@
                     <h3 class="title__subsection">Soy formada en pedagogía Infantil y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                     <ul class="title__network">
                          <!-- Pon los enlaces de tus redes sociales favoritas -->
-                        <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
+                        <li class="title__network__item"><a href="https://github.com/YeniAstaiza" target="_blank">Github <img src="assets\arrow.png"> </a></li>
                         <li class="title__network__item"><a href="https://www.linkedin.com/in/yeni-andrea-astaiza-villada-b71a08117" target="_blank">Linkedin <img src="assets\arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://instagram.com/yeniastaiza?igshid=ZDdkNTZiNTM=" target="_blank">Instagram <img src="assets\arrow.png"></a></li>
-                        <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item"><a href="target="_blank"">Currículo <img src="assets\arrow.png"></a></li>
                     </ul>
                 </div>
             </div>
@@ -59,8 +59,8 @@
     <section class="about" id="sobre-mi">
             <div class="about__container">
                 <h3 class="about__title">Sobre mi</h3>
-                <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.  </p>
-                <p class="about__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+                <p class="about__paragraph">Soy licenciada en Pedagogía Infantil, con competencia enfocadas en la articulación de los diversos contextos educativos, apoyados en el desarrollo de la investigación formativa e incluyendo metodologías y estrategias que permitan la formación integral en los educandos; asimismo, desde mis estudios en desarrollo Front-End, he aprendido a crear sitios web y aplicaciones que se adaptan a diferentes dispositivos y que son intuitivos y fáciles de usar.   </p>
+                <p class="about__paragraph">Por otro lado, mis habilidades se centran en la creatividad, adaptavilidad, liderazgo, trabajo en equipo, iniciativa por adquirir nuevos conocimientos y compromiso ante la solución de situaciones emergentes a nivel académico, laboral y social.</p>
             </div>
     </section>
 
@@ -123,7 +123,7 @@
                 <div class="hobbies__box">
                     <ul>
                         <li class="hobbies__img"> <img src="assets\headphones_icon.png" alt=""></li>
-                        <li class="hobbies__name">Oir música</li>
+                        <li class="hobbies__name">Escuchar música</li>
                     </ul>
                 </div>
 
@@ -191,7 +191,7 @@
                     <h3 class="experience__text">Challenge Oracle </h3>
                         <div class="experience__description">
                                 <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                                <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                                <span class="experience__repo"><a href="https://github.com/YeniAstaiza/Challenge-yeni.git" Target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
                                 <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
                         </div>
                 </div>
@@ -204,7 +204,7 @@
                     <h3 class="experience__text">Challenge Oracle </h3>
                         <div class="experience__description">
                                 <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                                <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                                <span class="experience__repo"><a href="https://github.com/YeniAstaiza/Challenge-Portafolio.git" Target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
                                 <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
                         </div>
               </div>
@@ -218,7 +218,7 @@
                     <h3 class="experience__text">En proceso </h3>
                         <div class="experience__description">
                                 <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                                <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                                <span class="experience__repo"><a href=" " Target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
                                 <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
                         </div>
                 </div>
@@ -240,7 +240,7 @@
                         <form class="formcontato__form" name="form">
                             <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
                             <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
-                            <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
+                            <input class="formcontato__input" type="text" name="asunto" placeholder="Asunto">
                             <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
                             <button type="submit" class="formcontato__botao">Enviar mensaje</button>
                         </form>
