--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li class="title__network__item"><a href="https://github.com/YeniAstaiza" target="_blank">Github <img src="assets\arrow.png"> </a></li>
                         <li class="title__network__item"><a href="https://www.linkedin.com/in/yeni-andrea-astaiza-villada-b71a08117" target="_blank">Linkedin <img src="assets\arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://instagram.com/yeniastaiza?igshid=ZDdkNTZiNTM=" target="_blank">Instagram <img src="assets\arrow.png"></a></li>
-                        <li class="title__network__item"><a href="target="_blank"">Currículo <img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item"><a href="https://yeniastaiza.github.io/Challenge-Portafolio/Curriculo-Yeni-2020.pdf"target="_blank">Currículo <img src="assets\arrow.png"></a></li>
                     </ul>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                     <h3 class="experience__text">Challenge Oracle </h3>
                         <div class="experience__description">
                                 <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                                <span class="experience__repo"><a href="https://github.com/YeniAstaiza/Challenge-yeni.git" Target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                                <span class="experience__repo"><a href="https://yeniastaiza.github.io/Challenge-yeni/" Target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
                                 <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
                         </div>
                 </div>
@@ -218,7 +218,7 @@
                     <h3 class="experience__text">En proceso </h3>
                         <div class="experience__description">
                                 <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                                <span class="experience__repo"><a href=" " Target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                                <span class="experience__repo"><a href="https://yeniastaiza.github.io/juego-clue/" Target="_blank"><button class="experiencia__botao--repo">Repositório</button></a></span>
                                 <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
                         </div>
                 </div>
